Fixed layout overflow issue

--- a/src/main.css
+++ b/src/main.css
@@ -6,7 +6,7 @@
 
 html,
 body {
-	max-width: 100vw;
+	max-width: 100%;
 	overflow-x: hidden;
 }
 
